<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonAddBan"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:background="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spBan2Player1" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/positive_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/close_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddRound" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/negative_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/ok_button"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddRound" />

    <Button
        android:id="@+id/buttonAddRound"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:background="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spRound3Player1" />

    <CheckBox
        android:id="@+id/chbRound1Winner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spRound1Player1"
        app:layout_constraintRight_toLeftOf="@id/spRound1Player1"
        app:layout_constraintTop_toTopOf="@id/spRound1Player1" />

    <CheckBox
        android:id="@+id/chbRound1Winner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spRound1Player2"
        app:layout_constraintRight_toLeftOf="@id/spRound1Player2"
        app:layout_constraintTop_toTopOf="@id/spRound1Player2" />

    <CheckBox
        android:id="@+id/chbRound2Winner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spRound2Player1"
        app:layout_constraintRight_toLeftOf="@id/spRound2Player1"
        app:layout_constraintTop_toTopOf="@id/spRound2Player1" />

    <CheckBox
        android:id="@+id/chbRound2Winner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spRound2Player2"
        app:layout_constraintRight_toLeftOf="@id/spRound2Player2"
        app:layout_constraintTop_toTopOf="@id/spRound2Player2" />

    <CheckBox
        android:id="@+id/chbRound3Winner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spRound3Player1"
        app:layout_constraintRight_toLeftOf="@id/spRound3Player1"
        app:layout_constraintTop_toTopOf="@id/spRound3Player1" />

    <CheckBox
        android:id="@+id/chbRound3Winner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/spRound3Player2"
        app:layout_constraintRight_toLeftOf="@id/spRound3Player2"
        app:layout_constraintTop_toTopOf="@id/spRound3Player2" />

    <Spinner
        android:id="@+id/spPlayer2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/spPlayer1"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spPlayer1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/spPlayer2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spBan1Player2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/spBan1Player1"
        app:layout_constraintTop_toBottomOf="@id/tvBans" />

    <Spinner
        android:id="@+id/spBan1Player1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/spBan1Player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBans" />

    <Spinner
        android:id="@+id/spBan2Player2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/spBan2Player1"
        app:layout_constraintTop_toBottomOf="@id/spBan1Player1" />

    <Spinner
        android:id="@+id/spBan2Player1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/spBan2Player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spBan1Player1" />

    <Spinner
        android:id="@+id/spRound1Player2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/spRound1Player1"
        app:layout_constraintTop_toBottomOf="@id/tvRounds" />

    <Spinner
        android:id="@+id/spRound1Player1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/spRound1Player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRounds" />

    <Spinner
        android:id="@+id/spRound2Player2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/spRound2Player1"
        app:layout_constraintTop_toBottomOf="@id/spRound1Player1" />

    <Spinner
        android:id="@+id/spRound2Player1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/spRound2Player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spRound1Player1" />

    <Spinner
        android:id="@+id/spRound3Player2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/spRound3Player1"
        app:layout_constraintTop_toBottomOf="@id/spRound2Player1" />

    <Spinner
        android:id="@+id/spRound3Player1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_outlined"
        android:popupBackground="@drawable/spinner_outlined_and_filled"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@id/spRound3Player2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spRound2Player1" />

    <TextView
        android:id="@+id/tvBans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bans"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spPlayer1" />

    <TextView
        android:id="@+id/tvRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rounds"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddBan" />
    <!--   <Spinner
           android:id="@+id/spWinnerRace"
           android:layout_width="100dp"
           android:layout_height="30dp"
           android:layout_margin="10dp"
           android:background="@drawable/spinner_outlined"
           android:popupBackground="@drawable/spinner_outlined_and_filled"
           android:spinnerMode="dropdown"
           app:layout_constraintEnd_toStartOf="@+id/spLoserRace"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/spWinnerName" />

       <Spinner
           android:id="@+id/spLoserRace"
           android:layout_width="100dp"
           android:layout_height="30dp"
           android:layout_margin="10dp"
           android:background="@drawable/spinner_outlined"
           android:popupBackground="@drawable/spinner_outlined_and_filled"
           android:spinnerMode="dropdown"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toEndOf="@+id/spWinnerRace"
           app:layout_constraintTop_toBottomOf="@id/spLoserName" />

       <Spinner
           android:id="@+id/spWinnerName"
           android:layout_width="100dp"
           android:layout_height="30dp"
           android:layout_margin="10dp"
           android:background="@drawable/spinner_outlined"
           android:popupBackground="@drawable/spinner_outlined_and_filled"
           android:spinnerMode="dropdown"
           app:layout_constraintEnd_toStartOf="@+id/spLoserName"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <Spinner
           android:id="@+id/spLoserName"
           android:layout_width="100dp"
           android:layout_height="30dp"
           android:layout_margin="10dp"
           android:background="@drawable/spinner_outlined"
           android:popupBackground="@drawable/spinner_outlined_and_filled"
           android:spinnerMode="dropdown"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toEndOf="@+id/spWinnerName"
           app:layout_constraintTop_toTopOf="parent" />

      -->

</androidx.constraintlayout.widget.ConstraintLayout>